--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,16 +1,50 @@
+---
 shared:
-    image: node:6
+  image: node:8
+  environment:
+    # DO NOT OVERRIDE THIS SETTING
+    SD_API_URL: 'http://api.screwdriver.cd/v4/'
 jobs:
-    # the main job is run in pull requests as well
-    main:
-        steps:
-            - install: npm install screwdriver-template-main
-            - validate: ./node_modules/.bin/template-validate
-        environment:
-            SD_TEMPLATE_PATH: ./templates/other-template.yaml
-    publish:
-        steps:
-            - install: npm install screwdriver-template-main
-            - publish: ./node_modules/.bin/template-publish
-        environment:
-            SD_TEMPLATE_PATH: ./templates/other-template.yaml
+  main:
+    requires: [~pr, ~commit]
+    steps:
+    - install_prerequisites: npm install -g screwdriver-template-main
+    - validate_namespace_template: |
+        template-validate
+    - validate_no-namespace_template: |
+        export SD_TEMPLATE_PATH=templates/other-template.yaml
+        template-validate
+    - validate_default-namespace_template: |
+        export SD_TEMPLATE_PATH=templates/screwdriver-template.yaml
+        template-validate
+  publish_namespace_template:
+    requires: [main]
+    steps:
+    - install_prerequisites: npm install -g screwdriver-template-main
+    - publish:  template-publish | tee publish.output
+    - determine_version: cat publish.output | awk -F[@\ ] '{print $3}' | tee VERSION
+    - save_version: /opt/sd/meta set template.template_namespace.version `cat VERSION`
+    - tag: |
+        template-tag --name tiff/template --version `cat VERSION` --tag namespace
+  publish_no-namespace_template:
+    requires: [main]
+    environment:
+      SD_TEMPLATE_PATH: templates/other-template.yaml
+    steps:
+    - install_prerequisites: npm install -g screwdriver-template-main
+    - publish:  template-publish | tee publish.output
+    - determine_version: cat publish.output | awk -F[@\ ] '{print $3}' | tee VERSION
+    - save_version: /opt/sd/meta set template.template_no-namespace.version `cat VERSION`
+    - tag: |
+        template-tag --name tiff/template --version `cat VERSION` --tag nonamespace
+  publish_default-namespace_template:
+    requires: [main]
+    environment:
+      SD_TEMPLATE_PATH: templates/screwdriver-template.yaml
+    steps:
+    - install_prerequisites: npm install -g screwdriver-template-main
+    - publish:  template-publish | tee publish.output
+    - determine_version: cat publish.output | awk -F[@\ ] '{print $3}' | tee VERSION
+    - save_version: /opt/sd/meta set template.template_default-namespace.version `cat VERSION`
+    - tag: |
+        template-tag --name tifftemplate --version `cat VERSION` --tag defaultnamespace
