--- a/templates/other-template.yaml
+++ b/templates/other-template.yaml
@@ -1,10 +1,10 @@
-name: tifftemplate2
-version: '1.3'
-description: tiffany's template for testing2
-maintainer: foo@bar.com
+name: tiff/template
+version: "1"
+description: no explicit namespace
+maintainer: nonamespace@bar.com
 config:
-  image: node:6
+  image: node:8
   steps:
-    - echo: echo $FOO
+    - echo: echo meow
   environment:
     FOO: baz
