--- a/templates/screwdriver-template.yaml
+++ b/templates/screwdriver-template.yaml
@@ -1,10 +1,8 @@
 name: tifftemplate
-version: 1.3.2
-description: tiffany's template for testing
-maintainer: foo@bar.com
+version: "1"
+description: should have default namespace
+maintainer: default@baz.com
 config:
-  image: node:6
+  image: node:8
   steps:
-    - echo: echo $FOO
-  environment:
-    FOO: bar
+    - echo: echo meow
