--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -12,10 +12,10 @@ jobs:
     - validate_namespace_template: |
         template-validate
     - validate_no-namespace_template: |
-        export SD_TEMPLATE_PATH=templates/other-template.yaml
+        export SD_TEMPLATE_PATH=./templates/other-template.yaml
         template-validate
     - validate_default-namespace_template: |
-        export SD_TEMPLATE_PATH=templates/screwdriver-template.yaml
+        export SD_TEMPLATE_PATH=./templates/screwdriver-template.yaml
         template-validate
   publish_namespace_template:
     requires: [main]
@@ -29,7 +29,7 @@ jobs:
   publish_no-namespace_template:
     requires: [main]
     environment:
-      SD_TEMPLATE_PATH: templates/other-template.yaml
+      SD_TEMPLATE_PATH: ./templates/other-template.yaml
     steps:
     - install_prerequisites: npm install -g screwdriver-template-main
     - publish:  template-publish | tee publish.output
@@ -40,7 +40,7 @@ jobs:
   publish_default-namespace_template:
     requires: [main]
     environment:
-      SD_TEMPLATE_PATH: templates/screwdriver-template.yaml
+      SD_TEMPLATE_PATH: ./templates/screwdriver-template.yaml
     steps:
     - install_prerequisites: npm install -g screwdriver-template-main
     - publish:  template-publish | tee publish.output
