--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -2,6 +2,11 @@
 shared:
   image: node:8
 jobs:
+  test:
+    requires: [~pr, ~commit]
+    sourcePaths: ["README.md", "templates/"]
+    steps:
+    - echo: echo hi
   main:
     requires: [~pr, ~commit]
     steps:
