--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -7,6 +7,7 @@ jobs:
     sourcePaths: ["README.md", "templates/"]
     steps:
     - echo: echo hi
+    - cat: echo $SD_SOURCE_PATH
   main:
     requires: [~pr, ~commit]
     steps:
