--- a/templates/other-template.yaml
+++ b/templates/other-template.yaml
@@ -1,10 +1,19 @@
 name: tiff/template2
-version: "1"
-description: no explicit namespace
+version: "2"
+description: test template composition with order keyword
 maintainer: nonamespace@bar.com
+order:
+  - test
+  - install
+  - echo
 config:
+  template: minz/nodejs_main@2
   image: node:8
   steps:
-    - echo: echo meow
+    - echo: echo woof
+    - install: echo skip
   environment:
     FOO: baz
+    NODE_ENV: development
+  secrets:
+    - GIT_TOKEN
