--- a/sd-template.yaml
+++ b/sd-template.yaml
@@ -11,7 +11,12 @@ config:
   image: stable
   steps:
     - setup-ci: git clone https://github.com/screwdriver-cd/toolbox.git ci
-    - install: npm install
-    - duplicate: NPM_FILTER=screwdriver- ./ci/npm-dups.sh
-    - test: npm test
+    - install: 
+      command: npm install
+      locked: true
+    - duplicate:
+      command: NPM_FILTER=screwdriver- ./ci/npm-dups.sh
+    - test:
+      command: npm test
+      locked: true
     - coverage: ./ci/coverage.sh
